--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/evantzhao/prodbot/issues"
   },
-  "homepage": "https://github.com/evantzhao/prodbot#readme"
+  "homepage": "https://github.com/evantzhao/prodbot#readme", 
+  "engines": {
+    "node": "6.9.4"
+  }, 
+  "dependencies": {
+    "express": "4.16.2",
+    "body-parser": "1.18.2"
+  }
 }
