--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   }, 
   "dependencies": {
     "express": "4.16.2",
-    "body-parser": "1.18.2"
+    "body-parser": "1.18.2", 
+    "request": "2.83.0"
   }
 }
