--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -16,13 +16,19 @@
   "bugs": {
     "url": "https://github.com/evantzhao/prodbot/issues"
   },
-  "homepage": "https://github.com/evantzhao/prodbot#readme", 
+  "homepage": "https://github.com/evantzhao/prodbot#readme",
   "engines": {
     "node": "6.9.4"
-  }, 
+  },
   "dependencies": {
+    "body-parser": "1.18.2",
     "express": "4.16.2",
-    "body-parser": "1.18.2", 
+    "mongoose": "^4.13.7",
+    "node-wit": "^4.3.0",
     "request": "2.83.0"
+  },
+  "devDependencies": {
+    "dotenv": "^4.0.0",
+    "nodemon": "^1.13.3"
   }
 }
